version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/Results/ProbeResults/VolumeProbe.rst.txt
.. vale off



:class:`VolumeProbe`
====================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.Results.ProbeResults.VolumeProbe

   Bases: :py:obj:`object`


   
   Defines a VolumeProbe.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: VolumeProbe

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~ClearGeneratedData`
            - Run the ClearGeneratedData action.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~DuplicateWithoutResults`
            - Run the DuplicateWithoutResults action.
          * - :py:attr:`~EvaluateAllResults`
            - Run the EvaluateAllResults action.
          * - :py:attr:`~ExportAnimation`
            - Run the ExportAnimation action.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.
          * - :py:attr:`~RenameBasedOnDefinition`
            - Run the RenameBasedOnDefinition action.
          * - :py:attr:`~SnapToMeshNodes`
            - Snap the coordinates of probe result to the mesh nodes.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~BeamSelection`
            - Gets or sets the BeamSelection.
          * - :py:attr:`~BoundaryConditionSelection`
            - Gets or sets the BoundaryConditionSelection. In order to select the option 'WeakSprings', please use the property 'LocationMethod = LocationDefinitionMethod.WeakSprings'.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ContactRegionSelection`
            - Gets or sets the ContactRegionSelection.
          * - :py:attr:`~CoordinateSystemSelection`
            - Gets or sets the CoordinateSystemSelection.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~DisplayTime`
            - Gets or sets the DisplayTime.
          * - :py:attr:`~DpfEvaluation`
            - Gets or sets the DpfEvaluation.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GeometryLocation`
            - Gets or sets the GeometryLocation.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~IsSolved`
            - Gets the IsSolved.
          * - :py:attr:`~IterationNumber`
            - Gets the IterationNumber.
          * - :py:attr:`~LoadStep`
            - Gets the LoadStep.
          * - :py:attr:`~LoadStepNumber`
            - Gets or sets the LoadStepNumber.
          * - :py:attr:`~LocationMethod`
            - Gets or sets the LocationMethod.
          * - :py:attr:`~MaximumTotal`
            - Gets the MaximumTotal.
          * - :py:attr:`~MaximumVolume`
            - Gets the MaximumVolume.
          * - :py:attr:`~MaximumXAxis`
            - Gets the MaximumXAxis.
          * - :py:attr:`~MaximumYAxis`
            - Gets the MaximumYAxis.
          * - :py:attr:`~MaximumZAxis`
            - Gets the MaximumZAxis.
          * - :py:attr:`~MeshConnectionSelection`
            - Gets or sets the MeshConnectionSelection.
          * - :py:attr:`~MinimumTotal`
            - Gets the MinimumTotal.
          * - :py:attr:`~MinimumVolume`
            - Gets the MinimumVolume.
          * - :py:attr:`~MinimumXAxis`
            - Gets the MinimumXAxis.
          * - :py:attr:`~MinimumYAxis`
            - Gets the MinimumYAxis.
          * - :py:attr:`~MinimumZAxis`
            - Gets the MinimumZAxis.
          * - :py:attr:`~Orientation`
            - Gets or sets the Orientation. Accepts/Returns None if it is the Solution Coordinate System.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RemotePointSelection`
            - Gets or sets the RemotePointSelection.
          * - :py:attr:`~ResultSelection`
            - Gets or sets the ResultSelection.
          * - :py:attr:`~SpatialResolution`
            - Gets or sets the SpatialResolution.
          * - :py:attr:`~SpringSelection`
            - Gets or sets the SpringSelection.
          * - :py:attr:`~Substep`
            - Gets the Substep.
          * - :py:attr:`~Summation`
            - Gets or sets the Summation.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~SurfaceSelection`
            - Gets or sets the MeshConnectionSelection.
          * - :py:attr:`~Time`
            - Gets the Time.
          * - :py:attr:`~Total`
            - Gets the Total.
          * - :py:attr:`~Type`
            - Gets the Type.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.
          * - :py:attr:`~VolumeResult`
            - Gets the VolumeResult.
          * - :py:attr:`~XAxis`
            - Gets the XAxis.
          * - :py:attr:`~XCoordinate`
            - Gets the XCoordinate.
          * - :py:attr:`~YAxis`
            - Gets the YAxis.
          * - :py:attr:`~YCoordinate`
            - Gets the YCoordinate.
          * - :py:attr:`~ZAxis`
            - Gets the ZAxis.
          * - :py:attr:`~ZCoordinate`
            - Gets the ZCoordinate.







Property detail
---------------
.. py:property:: BeamSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.Connections.Beam]

   
   Gets or sets the BeamSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: BoundaryConditionSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.DataModelObject]

   
   Gets or sets the BoundaryConditionSelection. In order to select the option 'WeakSprings', please use the property 'LocationMethod = LocationDefinitionMethod.WeakSprings'.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[list[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ContactRegionSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.Connections.ContactRegion]

   
   Gets or sets the ContactRegionSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: CoordinateSystemSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the CoordinateSystemSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: DisplayTime
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the DisplayTime.
















   ..
       !! processed by numpydoc !!

.. py:property:: DpfEvaluation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DpfEvaluationType]

   
   Gets or sets the DpfEvaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GeometryLocation
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Gets or sets the GeometryLocation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSProbeResultAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsSolved
   :type: Optional[bool]

   
   Gets the IsSolved.
















   ..
       !! processed by numpydoc !!

.. py:property:: IterationNumber
   :type: Optional[int]

   
   Gets the IterationNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStep
   :type: Optional[int]

   
   Gets the LoadStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: LoadStepNumber
   :type: Optional[int]

   
   Gets or sets the LoadStepNumber.
















   ..
       !! processed by numpydoc !!

.. py:property:: LocationMethod
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LocationDefinitionMethod]

   
   Gets or sets the LocationMethod.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumTotal
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MaximumTotal.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumVolume
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MaximumVolume.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumXAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MaximumXAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumYAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MaximumYAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumZAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MaximumZAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshConnectionSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.MeshConnection]

   
   Gets or sets the MeshConnectionSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumTotal
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MinimumTotal.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumVolume
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MinimumVolume.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumXAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MinimumXAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumYAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MinimumYAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumZAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the MinimumZAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: Orientation
   :type: Optional[Ansys.ACT.Automation.Mechanical.CoordinateSystem]

   
   Gets or sets the Orientation. Accepts/Returns None if it is the Solution Coordinate System.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RemotePointSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.RemotePoint]

   
   Gets or sets the RemotePointSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: ResultSelection
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ProbeDisplayFilter]

   
   Gets or sets the ResultSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpatialResolution
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MinimumOrMaximum]

   
   Gets or sets the SpatialResolution.
















   ..
       !! processed by numpydoc !!

.. py:property:: SpringSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.Connections.Spring]

   
   Gets or sets the SpringSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Substep
   :type: Optional[int]

   
   Gets the Substep.
















   ..
       !! processed by numpydoc !!

.. py:property:: Summation
   :type: Optional[Ansys.Mechanical.DataModel.Enums.MomentsAtSummationPointType]

   
   Gets or sets the Summation.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: SurfaceSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.Surface]

   
   Gets or sets the MeshConnectionSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: Time
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the Time.
















   ..
       !! processed by numpydoc !!

.. py:property:: Total
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the Total.
















   ..
       !! processed by numpydoc !!

.. py:property:: Type
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ProbeResultType]

   
   Gets the Type.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: VolumeResult
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the VolumeResult.
















   ..
       !! processed by numpydoc !!

.. py:property:: XAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the XAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: XCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the XCoordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: YAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the YAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: YCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the YCoordinate.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZAxis
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the ZAxis.
















   ..
       !! processed by numpydoc !!

.. py:property:: ZCoordinate
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets the ZCoordinate.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: ClearGeneratedData() -> None

   
   Run the ClearGeneratedData action.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: DuplicateWithoutResults() -> Ansys.ACT.Automation.Mechanical.DataModelObject

   
   Run the DuplicateWithoutResults action.

   ..
       !! processed by numpydoc !!

.. py:method:: EvaluateAllResults() -> None

   
   Run the EvaluateAllResults action.

   ..
       !! processed by numpydoc !!

.. py:method:: ExportAnimation(filePath: str, format: Ansys.Mechanical.DataModel.Enums.GraphicsAnimationExportFormat, settings: Ansys.Mechanical.Graphics.AnimationExportSettings) -> None

   
   Run the ExportAnimation action.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: list[ChildrenType]) -> list[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: RenameBasedOnDefinition() -> None

   
   Run the RenameBasedOnDefinition action.

   ..
       !! processed by numpydoc !!

.. py:method:: SnapToMeshNodes() -> None

   
   Snap the coordinates of probe result to the mesh nodes.

   ..
       !! processed by numpydoc !!



.. vale on